# GitScribe

./: ARCHITECTURE.md  CHANGELOG.md  DEVELOPMENT.md  README.md  SUMMARY.md  pyproject.toml  requirements.txt  run.ps1  run.py
docs/: ARCHITECTURE.md  CHANGELOG.md  DEVELOPMENT.md
src/gitscribe/: __init__.py  cli.py  git_reader.py
src/gitscribe.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/gitscribe/analyzers/: __init__.py  architecture.py  breaking.py  churn.py  timeline.py
src/gitscribe/generators/: __init__.py  architecture.py  changelog.py  development.py  summary.py
